# src/controllers/v1/ExpenseController.ts
@@ -6,7 +6,9 @@ import {
   Response,
   Body,
   Patch,
+  Path,
   Delete,
+  Get,
 } from "@tsoa/runtime";
 import { lazyInject } from "@n-configs/container";
 import { SERVICES } from "@n-types/injections/services";
@@ -18,6 +20,19 @@ import { IExpenseServices } from "@n-services/interface";
 export class ExpenseController {
   @lazyInject(SERVICES.ExpenseServices)
   private ExpenseServices: IExpenseServices;
+
+  @Response<{ status: number; message: string }>(500) // error response
+  @Get("/:id")
+  async getExpense(
+    @Path() id: number,
+  ): Promise<any> {
+    const result = await this.ExpenseServices.findById(id);
+    return {
+      status: 200,
+      message: "success",
+      data: result,
+    }
+  }
 
   @Response<{ status: number; message: string }>(500) // error response
   @Post("/")
@@ -59,11 +74,8 @@ export class ExpenseController {
       userKey: string,
       amount?: number,
       note?: string,
-      category?: {
-        id: number,
-        name?: string,
-        color?: string,
-      }
+      categoryId?: number,
+      time?: string,
     },
   ): Promise<any> {
     const result = await this.ExpenseServices.update(body.id, body);
@@ -79,9 +91,10 @@ export class ExpenseController {
   async deleteExpense(
     @Body() body: {
       id: number,
+      userKey: string,
     },
   ): Promise<any> {
-    const result = await this.ExpenseServices.delete(body.id);
+    const result = await this.ExpenseServices.delete(body.id, body.userKey);
     return {
       status: 200,
       message: "success",
