# src/models/WishList.ts
@@ -1,14 +1,12 @@
 import { ExtendedModel } from "./ExtendedModel"; 
 import { db } from "@n-configs/database";
-import Category from "./Category";
 
 class WishList extends ExtendedModel {
   id!: number;
-  note?: string;
+  name?: string;
   amount?: number;
-  list_index?: number;
-  category_id: number;
   user_key: string;
+  time?: Date | string | null;
   created_at?: Date | string | null;
   updated_at?: Date | string | null;
 
@@ -20,9 +18,9 @@ class WishList extends ExtendedModel {
     properties: {
       id: { type: "integer" },
       amount: { type: ["number", "null"] },
-      note: { type: ["string", "null"], maxLength: 255 },
-      category_id: { type: "integer" },
+      name: { type: ["string", "null"], maxLength: 255 },
       user_key: { type: "string", maxLength: 255 },
+      time: { type: ["string", "null"], format: "date-time" },
       created_at: { type: ["string", "null"], format: "date-time" },
       updated_at: { type: ["string", "null"], format: "date-time" },
     },
@@ -34,12 +32,4 @@ const WishListModel = WishList.bindKnex(db);
 export default WishListModel;
 
 WishListModel.relationMappings = {
-  categories: {
-    relation: ExtendedModel.BelongsToOneRelation,
-    modelClass: () => Category,
-    join: {
-      from: "wish_list.category_id",
-      to: "categories.id",
-    },
-  }
 }
